--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,8 @@ SteamDevAppId=480
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/dont_cheat_me/Maps/Levels/Office.Office
+EditorStartupMap=/Game/dont_cheat_me/Maps/Levels/Office.Office
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
