--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,8 +12,11 @@ SteamDevAppId=480
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/dont_cheat_me/Maps/Levels/Office.Office
+GameDefaultMap=/Game/dont_cheat_me/Maps/Menus/MainMenu.MainMenu
 EditorStartupMap=/Game/dont_cheat_me/Maps/Levels/Office.Office
+ServerDefaultMap=/Game/dont_cheat_me/Maps/Levels/Lobby.Lobby
+GlobalDefaultGameMode=/Game/dont_cheat_me/Core/Blueprints/Menu/BP_GM_Menu.BP_GM_Menu_C
+TransitionMap=/Game/dont_cheat_me/Maps/Menus/Travel.Travel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
