Add Friends list and handle session errors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,10 +13,11 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/dont_cheat_me/Maps/Menus/MainMenu.MainMenu
-EditorStartupMap=/Game/dont_cheat_me/Maps/Levels/Office.Office
+EditorStartupMap=/Game/dont_cheat_me/Maps/Levels/Street.Street
 ServerDefaultMap=/Game/dont_cheat_me/Maps/Levels/Lobby.Lobby
 GlobalDefaultGameMode=/Game/dont_cheat_me/Core/Blueprints/Menu/BP_GM_Menu.BP_GM_Menu_C
 TransitionMap=/Game/dont_cheat_me/Maps/Menus/Travel.Travel
+GameInstanceClass=/Game/dont_cheat_me/Core/Blueprints/PB_GI_Core.PB_GI_Core_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
