--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,7 +17,7 @@ EditorStartupMap=/Game/dont_cheat_me/Maps/Levels/Street.Street
 ServerDefaultMap=/Game/dont_cheat_me/Maps/Levels/Lobby.Lobby
 GlobalDefaultGameMode=/Game/dont_cheat_me/Core/Blueprints/Menu/BP_GM_Menu.BP_GM_Menu_C
 TransitionMap=/Game/dont_cheat_me/Maps/Menus/Travel.Travel
-GameInstanceClass=/Game/dont_cheat_me/Core/Blueprints/PB_GI_Core.PB_GI_Core_C
+GameInstanceClass=/Game/dont_cheat_me/Core/Blueprints/PB_GI_CoreFriends.PB_GI_CoreFriends_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
