Fiw Locomotion animations

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/dont_cheat_me/Maps/Menus/MainMenu.MainMenu
-EditorStartupMap=/Game/Debug/Debug.Debug
+EditorStartupMap=/Game/dont_cheat_me/Maps/Levels/Street.Street
 ServerDefaultMap=/Game/dont_cheat_me/Maps/Levels/Lobby.Lobby
 GlobalDefaultGameMode=/Game/dont_cheat_me/Core/Blueprints/Menu/BP_GM_Menu.BP_GM_Menu_C
 TransitionMap=/Game/dont_cheat_me/Maps/Menus/Travel.Travel
